@@ -1,3 +1,13 @@
+2016-10-10  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/71947
+	* gcc.dg/tree-ssa/pr71947-1.c: New test.
+	* gcc.dg/tree-ssa/pr71947-2.c: New test.
+	* gcc.dg/tree-ssa/pr71947-3.c: New test.
+	* gcc.dg/tree-ssa/pr71947-4.c: New test.
+	* gcc.dg/tree-ssa/pr71947-5.c: New test.
+	* gcc.dg/tree-ssa/pr71947-6.c: New test.
+
 2016-10-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/77915
